# weather_edge

./: .env.example  .gitignore  .semgrepignore  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  cities_data.json  details.html  diagnostics.json  google_weather_cache.json  index.html  package.json  publication_manifest.json  pyproject.toml  strategy-lab.html  strategy_research.json  trading_signal.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.semgrep/: weatheredge.yml
.vite/: manifest.json
assets/: AnimatedNumber-B99l_v_k.js  AnimatedNumber-BtxswSlK.js  AnimatedNumber-BysmYtMx.js  AnimatedNumber-CZMY7_8K.js  AnimatedNumber-CZPRiuFd.js  AnimatedNumber-DDwcjRwC.js  AnimatedNumber-Dllf3ANr.js  AnimatedNumber-DmgQr-Ji.js  AnimatedNumber-DtyNYOVI.js  AnimatedNumber-S3blOqB5.js  AnimatedNumber-gpVQ9tzX.js  AreaChart-BCVJYJ6o.js  AreaChart-BvEm7Ikd.js  AreaChart-C9T2gFFc.js  AreaChart-CeURRQv3.js  AreaChart-F3uA5R2Z.js  AreaChart-KI6KJ6uR.js  AreaChart-lqx32XNh.js  CityDetail-6bK2vwB0.js  CityDetail-AeC6PcXc.js  CityDetail-AfGaHAq0.js  CityDetail-BIjaiiDG.js  CityDetail-BJZUlS2o.css  CityDetail-BXM5YrJG.js  CityDetail-BzjAf4-w.js  CityDetail-C3Po4OlV.js  CityDetail-C8XAWNdt.js  CityDetail-Ch4TfO0w.js  CityDetail-DA092k-Z.css  CityDetail-DtlQwox2.js  CityDetail-NsjmOFDG.js  CityDetail-P7aqJ4JJ.css  CommandPalette-9UKGbqfT.js  CommandPalette-BhpQpMik.js  CommandPalette-BjolJPQj.js  CommandPalette-C6jA-Z9I.js  CommandPalette-C9nLMXjs.js  CommandPalette-CGwlsxli.js  CommandPalette-CNtMn4aK.css  CommandPalette-D2ToCfhj.css  (+291 more)
docs/: AUDIT-PLAN-2026-07-13-EXECUTION.md  AUDIT-PLAN-2026-07-13.md  AUDIT-PLAN.md  MULTICITY-2026-07.md  PHASE0-findings.md  RESEARCH-2026-07-forecast-trading.md  accuracy_evaluation_2026-07-06.md  ai-assisted-development.md  architecture.md  audit_2026-06-20.md  aws_deployment.md  aws_lightsail.md  calibration_edge_plan_2026-06-22.md  codebase_audit_2026-06-15.md  data_and_artifacts.md  glossary.md  lightsail_dataset_plan.md  operational_runbook.md  research_improvement_review.md  research_market_edge_and_tmax_2026-06-22.md  trade_engine_overhaul_plan_2026-06-17.md  trade_engine_parameter_audit.md  trading_retune_validation_2026-06-17.md  win_trades_volatility_reliability_2026-06-18.md
forecaster/: README.md  ab_test_results.json  backfill_nwp_archive.py  blend_archive.py  blend_learners.py  blend_sources.py  build_dashboard.py  cities.py  city_truth.py  clisfo.py  dashboard_payload.py  emos_forecast.py  emos_recalibration.py  emos_sources.py  features.py  forecast_backtest.py  forecast_postproc_backtest.py  google_api.py  google_multicity_refresh.py  google_paired_evidence.py  google_runtime_blend.py  google_runtime_purge.py  google_weather_cache.py  google_weather_store.py  nwp_archive.py  nws_ground_truth.py  postproc_models.py  postproc_recalibration.py  recalibration_replay.py  scores.py  seed_google_usage_ledger.py  settlement_calendar.py  truth_store.py  weather_cache_config.py
public/: forecast_data.json  trading_signal.json  weather_story_data.json
requirements/: production.in
scripts/: capture_initial_resources.mjs  clear_local_runtime_state.py  generate_icon_collection.mjs  github_hygiene_check.py  report_spa_bundle.mjs  run_tests.sh  weatheredge_health_check.py
src/: App.test.tsx  (+3 more)
(+416 files in other folders)
