[project]
name = "weatheredge"
version = "0.1.0"
description = "Unified SFO weather forecasting and Kalshi paper-trading research project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Daily forecast-refresh path only. Everything the AWS box runs (nws_ground_truth,
# google_weather_cache, nwp_archive, emos_forecast) needs nothing
# heavier than numpy + pandas. Keep this list light so `pip install .[forecaster]`
# stays safe to run on the 1 GB Lightsail box.
forecaster = [
  "numpy",
  "pandas",
]
# Offline model TRAINING / analysis only (lstm_model.py, xgboost_model.py, ab_test.py,
# compare_models.py, eda.py). These are heavy (torch alone is ~300-600 MB RSS) and must
# NEVER be installed on the 1 GB box -- run them on a dev machine or in GitHub Actions.
train = [
  "numpy",
  "pandas",
  "scikit-learn",
  "scipy",
  "xgboost",
  "torch",
  "matplotlib",
  "seaborn",
]
dev = [
  "certifi",
  "numpy",
  "pandas",
  "pytest>=8.0",
]

[project.scripts]
sfo-kalshi = "sfo_kalshi_quant.cli:main"

[tool.setuptools.packages.find]
where = ["trading"]
include = ["sfo_kalshi_quant*"]

[tool.pytest.ini_options]
testpaths = ["trading/tests", "forecaster/tests"]
pythonpath = ["trading", "forecaster"]
